# Ghostext

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml  spec.md
src/ghostext/: cli.py  config.py  crypto.py  encoder.py  errors.py  llama_cpp_backend.py  model_assets.py  model_backend.py  packet.py  quantization.py
src/hidetext/: __init__.py  candidate_policy.py  cli.py  codec.py  config.py  crypto.py  decoder.py  encoder.py  errors.py  llama_cpp_backend.py  model_assets.py  model_backend.py  packet.py  pipeline.py  progress.py  quantization.py
tests/: test_cli.py  test_codec_toy.py  test_crypto.py  test_failures.py  test_llama_cpp_integration.py  test_model_assets.py  test_packet.py  test_quantization.py  test_readme_examples.py  test_roundtrip_en.py  test_roundtrip_zh.py  test_tokenization_stability.py
