[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostext"
version = "0.1.0"
description = "Deterministic text steganography demo driven by next-token distributions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=41.0.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
llm = [
  "huggingface_hub>=0.24.0",
  "httpx[socks]>=0.28.0",
  "llama-cpp-python>=0.3.16",
]

[project.scripts]
ghostext = "ghostext.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
